# bayesian-role-specialization

./: .gitignore  CLAUDE.md  README.md
analysis/: pyproject.toml
analysis/experiments/2026-03-16_soft_optimality/: 2026-03-16-SoftOptimality_AllPilots_Report.ipynb
analysis/experiments/2026-03-24_model_benchmarks/: analysis.ipynb
analysis/experiments/2026-03-29-new-models-all-data/: analysis.ipynb
analysis/experiments/2026-03-29_individual_model_fitting/: analysis.ipynb
analysis/experiments/2026-03-29_learning_trajectories/: analysis.ipynb
analysis/experiments/2026-03-29_llm_baseline/: analysis.ipynb
analysis/experiments/2026-03-30-additional-metrics/: analysis.ipynb
analysis/experiments/2026-03-30-summary-of-all-models/: analysis.ipynb
analysis/experiments/2026-03-31-walk-thresh-ps/: analysis.ipynb
analysis/experiments/2026-04-02-bot-round-analysis/: analysis.ipynb
analysis/experiments/2026-04-02-inference-comparison/: analysis.ipynb  history_all_models.json
analysis/experiments/2026-04-06-bayesian-belief/: analysis.ipynb
analysis/experiments/2026-04-06-bot-round-analysis/: analysis.ipynb
analysis/experiments/2026-04-06-inference-comparison/: analysis.ipynb  history_all_models.json
analysis/experiments/2026-04-09-two-stage-tuning/: shared_utils.py  stage2_common.py
analysis/experiments/2026-04-11-memory-strategies/: refine.py  refined_results.json  refined_summary.json  results.json  summary.json  tune.py
analysis/shared/: __init__.py  constants.py  data_loading.py  env_loading.py  evaluation.py  inference.py  parsing.py
(+358 files in other folders)
