[project]
name = "brs-analysis"
version = "0.1.0"
description = "Analysis workspace for the Bayesian Role Specialization experiment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "memo-lang>=1.2.10",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scribe",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.uv.sources]
scribe = { git = "https://github.com/goodfire-ai/scribe.git" }
